Fix h3 styling in quiz on mobile devices.

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1318,6 +1318,11 @@ $palette-red: $palette4;
             color: white;
         }
 
+        h3 {
+            font-size: 15pt;
+            color: white;
+        }
+
         .question-answer-info {
             text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
         }
